# cclp-example

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: cclp.c.758CF896C544FD28.idx  cclp.h.088FA5CB089D9555.idx  cstr.c.87E160DBADD8063D.idx  cstr.h.404EE4FAB688D028.idx
lib/inc/: cclp.h  cstr.h
lib/inc/containers/: container.h  dequeue.h  vector.h
lib/src/: cclp.c  cstr.c
src/: CMakeLists.txt  main.c
